--- a/CwkSocial.API/appsettings.json
+++ b/CwkSocial.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "Default": "Data Source=.;Initial Catalog=CwkSocial;Integrated Security=True"
+  }
 }
