--- a/CwkSocial.Application/CwkSocial.APPLICATION.csproj
+++ b/CwkSocial.Application/CwkSocial.APPLICATION.csproj
@@ -6,4 +6,21 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="AutoMapper" Version="12.0.0" />
+    <PackageReference Include="MediatR" Version="11.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Posts\Commands\" />
+    <Folder Include="Posts\CommandHandles\" />
+    <Folder Include="Posts\QueryHandles\" />
+    <Folder Include="Posts\Queries\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\CwkSocial.DAL\CwkSocial.DAL.csproj" />
+    <ProjectReference Include="..\CwkSocial.Domain\CwkSocial.DOMAIN.csproj" />
+  </ItemGroup>
+
 </Project>
