--- a/CwkSocial.API/appsettings.json
+++ b/CwkSocial.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "Default": "Data Source=.;Initial Catalog=CwkSocial;Integrated Security=True"
+  },
+  "JwtSettings": {
+    "SigningKey": "f5422e6cdfde4af3bf631c7dd1f80b97",
+    "Issuer": "CwkSocial",
+    "Audiences": [ "SwaggerUI" ]
   }
 }
