Learn Claim based behavior and refactoring

--- a/CwkSocial.Application/CwkSocial.APPLICATION.csproj
+++ b/CwkSocial.Application/CwkSocial.APPLICATION.csproj
@@ -19,6 +19,7 @@
   <ItemGroup>
     <Folder Include="Identity\QueryHandlers\" />
     <Folder Include="Identity\Queries\" />
+    <Folder Include="MappingProfiles\" />
   </ItemGroup>
 
 </Project>
